@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-08-11T02:01:29Z",
-  "count_outdated" : 9337,
-  "uniques_outdated" : 4516,
-  "count" : 9421,
-  "uniques" : 4586,
+  "timestamp" : "2025-08-11T12:50:10Z",
+  "count_outdated" : 9340,
+  "uniques_outdated" : 4519,
+  "count" : 9423,
+  "uniques" : 4588,
   "clones" : [
-    {
-      "timestamp": "2025-07-28T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 3 ],
-      "count_decinc": [ 1, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 3 ],
-      "uniques_decinc": [ 1, 3 ]
-    },
     {
       "timestamp": "2025-07-29T00:00:00Z",
       "count": 6,
@@ -130,6 +121,15 @@
       "uniques": 3,
       "uniques_minmax": [ 1, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2025-08-11T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
