@@ -1,12 +1,7 @@
 {
   "count": 83,
-  "uniques": 42,
+  "uniques": 43,
   "clones": [
-    {
-      "timestamp": "2025-07-28T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2025-07-29T00:00:00Z",
       "count": 6,
@@ -71,6 +66,11 @@
       "timestamp": "2025-08-10T00:00:00Z",
       "count": 3,
       "uniques": 3
+    },
+    {
+      "timestamp": "2025-08-11T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
